# src/swagger-output.json
@@ -514,6 +514,33 @@
           }
         }
       },
+      "InviteAdmin": {
+        "type": "object",
+        "required": ["user_id", "email"],
+        "properties": {
+          "user_id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          }
+        }
+      },
+      "SetAdminPassword": {
+        "type": "object",
+        "required": ["user_id", "email"],
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
       "RootSignIn": {
         "type": "object",
         "required": [
